--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,11 +1,33 @@
-<div style="display:flex; gap: 5rem;">
-  <div>
-
-    <h1 id="ola">Productos agregados</h1>
-    <div id="container">
-      
-    </div>
-  </div>
-</div>
+<h1 style="text-align:center">Productos desde realTimeProducts</h1>
+<section class="container">
+  <table class="table table-success table-striped">
+    <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Title</th>
+          <th scope="col">Description</th>
+          <th scope="col">Price</th>
+          <th scope="col">Code</th>
+          <th scope="col">Stock</th>
+          <th scope="col">Status</th>
+          <th scope="col">Category</th>
+        </tr>
+    </thead>
+    <tbody id="container">
+      {{#each products}}
+          <tr>
+              <td>{{this.id}}</td>
+              <td>{{this.title}}</td>
+              <td>{{this.description}}</td>
+              <td>{{this.price}}</td>
+              <td>{{this.code}}</td>
+              <td>{{this.stock}}</td>
+              <td>{{this.status}}</td>
+              <td>{{this.category}}</td>
+          </tr>
+      {{/each}}
+    </tbody>
+  </table>
+</section>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
