passport y autenticacion x git

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -19,13 +19,17 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-12 text-center mt-3">
-                                <input type="submit" class="btn btn-primary btn-lg">
+                                <button type="submit" class="btn btn-primary btn-lg">Ingresar</button>
                             </div>
                         </div>
                     </fieldset>
                 </form>
+                
+                <a href="/api/sessions/github"><button class="btn btn-primary btn-lg">Ingresar con github</button></a>
+                <br/>
                 <br/>
                 <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
+                <p>¿Olvidaste tu contraseña? <a href="/reset">Restaurala aquí</a></p>
             </div>
         </div>
     </div>
