desafio complementario 2 practica integradora

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -25,7 +25,7 @@
                     </fieldset>
                 </form>
                 
-                <a href="/api/sessions/github"><button class="btn btn-primary btn-lg">Ingresar con github</button></a>
+                <a href="/api/users/github"><button class="btn btn-primary btn-lg">Ingresar con github</button></a>
                 <br/>
                 <br/>
                 <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
@@ -35,3 +35,4 @@
     </div>
 </div>
 <script src="/js/login.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
