--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -38,5 +38,5 @@
     {{#if hasNextPage}}
         <a href="/products?page={{nextPage}}&limit=5"><button class="rounded-pill" >Siguiente</button></a>
     {{/if}}
-    <a href="/api/sessions/logout"><button class="rounded-pill" >Salir</button></a>
+    <a href="/api/users/logout"><button class="rounded-pill" >Salir</button></a>
 </section>
